31/01 Animaciones en todo menos movil 1h30min

--- a/src/modules/bath/06_EncimeraTop/info.css
+++ b/src/modules/bath/06_EncimeraTop/info.css
@@ -1,460 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
 
-img {
+/* img {
   max-width: 100%;
-}
-
-.full {
-  width: 100%;
-  padding: 0;
-}
-
-.full img {
-  width: 100%;
-}
-
-ul li img {
-  width: 100%;
-}
-
-.par {
-  background: #f1f1f1;
-}
-
-.verIntro {
-  background: #707070;
-  position: relative;
-  z-index: 1;
-  width: 100%;
-  min-height: 573px;
-}
-
-.ip-main {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-
-.ip-logo {
-  position: relative;
-  z-index: 1;
-}
-
-.tituloAlto {
-  width: 80%;
-  margin: auto;
-  font-size: 24px;
-  padding-top: 100px;
-}
-
-.titulo {
-  margin-left: 10%;
-  padding-top: 180px;
-  font-size: 140px;
-  padding-bottom: 40px;
-  float: left;
-  visibility: hidden;
-}
-
-.subTitulo {
-  margin-left: 10%;
-  padding-top: 30px;
-  font-size: 140px;
-  border-top: 1px solid #000;
-  float: left;
-  visibility: hidden;
-}
-
-.no-js .titulo,
-.no-js .subTitulo {
-  visibility: visible;
-}
-
-.navegar {
-  position: absolute;
-  text-align: center;
-  bottom: 2%;
-  width: 100%;
-}
-
-.titular {
-  width: 30%;
-  float: left;
-  font-size: 38px;
-  margin-left: 15%;
-}
-
-.txtIntroduccion {
-  width: 25%;
-  float: left;
-  margin-left: 50%;
-}
-
-.titIndice {
-  font-size: 48px;
-  font-weight: bold;
-}
-
-.sinFondo {
-  display: none;
-}
-
-/* Common styles for the menus */
-a {
-  text-decoration: none;
-}
-
-.menu {
-  position: relative;
-  z-index: 10;
-  width: 300px;
-  margin: auto;
-}
-
-.menu__item {
-  line-height: 1;
-  position: relative;
-  display: block;
-  margin: 1em 0;
-  outline: none;
-}
-
-.menu__item-name,
-.menu__item-label {
-  position: relative;
-  display: inline-block;
-}
-
-.menu__item-label {
-  margin: 0 0 0 0.5em;
-}
-
-.menu--ama {
-  counter-reset: itemCounter;
-}
-
-.menu--ama .menu__item {
-  font-size: 1.25em;
-  font-weight: 500;
-  margin: 3em 0;
-  padding-left: 0.5em;
-  color: #32343c;
-}
-
-.menu--ama .menu__item {
-  --menu-item-color: #8b3124;
-}
-
-.menu--ama .noactivo {
-  --menu-item-color: #ddd;
-  cursor: auto;
-  color: #aaa;
-}
-
-.menu--ama .menu__item::before {
-  content: counter(itemCounter, decimal-leading-zero);
-  font-size: 0.85em;
-  font-weight: bold;
-  position: absolute;
-  right: 100%;
-  bottom: calc(100% - 0.35em);
-  counter-increment: itemCounter;
-  color: #ddd;
-}
-
-.menu--ama .menu__item:hover::before,
-.menu--ama .menu__item:focus::before {
-  color: var(--menu-item-color);
-}
-
-.menu--ama .menu__item-name {
-  font-weight: 500;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0.3em 0 0 0;
-  white-space: pre;
-  text-transform: lowercase;
-}
-
-.menu--ama .menu__item-name::before,
-.menu--ama .menu__item-name::after {
-  content: "";
-  position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 2.5em;
-  height: 4px;
-  background: #ddd;
-}
-
-.menu--ama .menu__item-name::after {
-  background: var(--menu-item-color);
-  transform: scale3d(0, 1, 1);
-  transform-origin: 0% 50%;
-  transition: transform 0.5s;
-}
-
-.menu--ama .menu__item:hover .menu__item-name::after,
-.menu--ama .menu__item:focus .menu__item-name::after {
-  transform: scale3d(1, 1, 1);
-}
-
-.menu--ama .menu__item-name span {
-  display: inline-block;
-}
-
-/*Estilos para el menu oculto*/
-
-.container,
-.content-wrap {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  background: #333333;
-}
-
-.menu-wrap a {
-  color: #b8b7ad;
-}
-
-.menu-wrap a:hover,
-.menu-wrap a:focus {
-  color: #8b3124;
-}
-
-.menu-wrap a.inactivo:hover,
-.menu-wrap a.inactivo:focus {
-  color: #b8b7ad;
-  cursor: auto;
-}
-
-.content {
-  position: relative;
-  background: #b4bad2;
-}
-
-.content::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  content: "";
-  opacity: 0;
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-  -webkit-transition: opacity 0.4s, -webkit-transform 0s 0.4s;
-  transition: opacity 0.4s, transform 0s 0.4s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-}
-
-/* Menu Button */
-.menu-button {
-  z-index: 1000;
-  padding: 0;
-  width: 2.5em;
-  height: 2.25em;
-  border: none;
-  text-indent: 2.5em;
-  font-size: 1.5em;
-  color: transparent;
-  background: transparent;
-}
-
-.menu-button::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(
-    #333333 20%,
-    transparent 20%,
-    transparent 40%,
-    #333333 40%,
-    #333333 60%,
-    transparent 60%,
-    transparent 80%,
-    #333333 80%
-  );
-  content: "";
-  width: 30px;
-  height: 25px;
-}
-
-.menu-button:hover {
-  opacity: 0.6;
-}
-
-#open-button {
-  position: absolute;
-  z-index: 9999;
-  margin-top: 30px;
-  margin-left: 30px;
-}
-
-.open-fixed {
-  position: fixed !important;
-  top: 0;
-}
-.menu-wrap {
-  position: relative;
-  z-index: 99999 !important;
-}
-
-.openM-fixed {
-  position: fixed !important;
-  z-index: 99999 !important;
-  top: 0;
-  margin-top: 0px !important;
-}
-/* Close Button */
-.close-button {
-  width: 1em;
-  height: 1em;
-  position: absolute;
-  right: 1em;
-  top: 1em;
-  overflow: hidden;
-  text-indent: 1em;
-  font-size: 0.75em;
-  border: none;
-  background: transparent;
-  color: transparent;
-}
-
-.close-button::before,
-.close-button::after {
-  content: "";
-  position: absolute;
-  width: 3px;
-  height: 100%;
-  top: 0;
-  left: 50%;
-  background: #bdc3c7;
-}
-
-.close-button::before {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.close-button::after {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-/* Menu */
-.menu-wrap {
-  position: absolute;
-  z-index: 1001;
-  width: 300px;
-  background: #333333;
-  padding: 2.5em 1.5em 0;
-  font-size: 1.15em;
-  -webkit-transform: translate3d(-370px, 0, 0);
-  transform: translate3d(-370px, 0, 0);
-  -webkit-transition: -webkit-transform 0.4s;
-  transition: transform 0.4s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  overflow: hidden;
-}
-
-.menu,
-.icon-list {
-  height: 100%;
-}
-
-.icon-list {
-  -webkit-transform: translate3d(0, 100%, 0);
-  transform: translate3d(0, 100%, 0);
-}
-
-.icon-list a {
-  display: block;
-  padding: 0.4em 0.8em;
-  -webkit-transform: translate3d(0, 500px, 0);
-  transform: translate3d(0, 500px, 0);
-}
-
-.icon-list,
-.icon-list a {
-  -webkit-transition: -webkit-transform 0s 0.4s;
-  transition: transform 0s 0.4s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-}
-
-.icon-list a:nth-child(2) {
-  -webkit-transform: translate3d(0, 1000px, 0);
-  transform: translate3d(0, 1000px, 0);
-}
-
-.icon-list a:nth-child(3) {
-  -webkit-transform: translate3d(0, 1500px, 0);
-  transform: translate3d(0, 1500px, 0);
-}
-
-.icon-list a:nth-child(4) {
-  -webkit-transform: translate3d(0, 2000px, 0);
-  transform: translate3d(0, 2000px, 0);
-}
-
-.icon-list a:nth-child(5) {
-  -webkit-transform: translate3d(0, 2500px, 0);
-  transform: translate3d(0, 2500px, 0);
-}
-
-.icon-list a:nth-child(6) {
-  -webkit-transform: translate3d(0, 3000px, 0);
-  transform: translate3d(0, 3000px, 0);
-}
-
-.icon-list a span {
-  margin-left: 10px;
-  font-weight: 700;
-}
-
-/* Shown menu */
-.show-menu .menu-wrap {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transition: -webkit-transform 0.8s;
-  transition: transform 0.8s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-}
-
-.show-menu .icon-list,
-.show-menu .icon-list a {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transition: -webkit-transform 0.8s;
-  transition: transform 0.8s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-}
-
-.show-menu .icon-list a {
-  -webkit-transition-duration: 0.9s;
-  transition-duration: 0.9s;
-}
-
-.show-menu .content::before {
-  opacity: 1;
-  -webkit-transition: opacity 0.8s;
-  transition: opacity 0.8s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
+} */
 
 /*Hasta aquÃ­ estilos pÃ¡gina Ã­ndice*/
 
@@ -463,44 +12,7 @@ a {
   padding: 50px 0px 20px 0px;
 }
 
-.medio {
-  width: 50%;
-  float: left;
-}
-
-.tercio {
-  width: 23%;
-  padding: 5%;
-  float: left;
-  border-left: 1px solid #000;
-  border-right: 1px solid #000;
-  margin-left: -1px;
-}
-
-.sinLinea {
-  border-right: 0px;
-}
-
 /*CSS MEDIDAS*/
-.dosTercios {
-  width: 63.8%;
-  float: left;
-  margin-right: 2.2%;
-  padding-top: 3%;
-}
-
-.dosTercios img {
-  width: 100%;
-}
-.unTercio {
-  padding-top: 3%;
-  width: 33%;
-  float: left;
-}
-
-.unTercio img {
-  width: 100%;
-}
 
 .medTer {
   width: 33%;
@@ -551,577 +63,6 @@ a {
   width: 384px;
 }
 
-.vertical {
-  background: #000;
-  color: #fff;
-  font-size: 14px;
-  line-height: 35px;
-  padding-left: 10px;
-  width: 40px;
-  float: left;
-  margin-right: 15px;
-  height: 10px;
-  transition: height 0.6s;
-}
-
-.in-view#h42 {
-  height: 84px;
-}
-.in-view#h52 {
-  height: 104px;
-}
-.in-view#h24 {
-  height: 48px;
-}
-.in-view#h36 {
-  height: 72px;
-}
-.in-view#h48 {
-  height: 96px;
-}
-.in-view#h72 {
-  height: 144px;
-}
-
 .medTer img {
   width: 90%;
-}
-
-.sistemaApertura .rayita {
-  width: 95.7%;
-}
-
-.contieneSistema {
-  background: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  display: none;
-  z-index: 1000;
-}
-
-.imagen {
-  max-height: 800px;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-}
-
-.imagen video,
-.imagen img {
-  max-width: 90%;
-}
-
-.cerrar {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
-}
-.cerrar img {
-  height: 40px !important;
-  margin-top: 0px;
-  visibility: visible !important;
-}
-
-/*selector Juan*/
-.contieneJuan {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
-
-.tituloFull {
-  font-size: 48px;
-  font-weight: bold;
-  margin-left: 10%;
-  padding: 50px 0px 30px 0px;
-}
-
-.juan {
-  width: 100%;
-  position: absolute;
-  visibility: hidden;
-  top: 0;
-}
-
-.juan img {
-  width: 100%;
-}
-
-#fondo {
-  visibility: visible !important;
-}
-
-.marcador {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.marquita {
-  height: 40px;
-  width: 40px;
-  background: rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-  text-align: center;
-  line-height: 40px;
-  cursor: pointer;
-  position: absolute;
-  transition: all 0.3s;
-  display: none;
-}
-
-.marquita img {
-  max-width: 10px;
-}
-
-.marquita:hover {
-  background: rgba(0, 0, 0, 0.6);
-}
-
-#marcaMueble {
-  left: 45%;
-  top: 59%;
-}
-
-#marcaTop {
-  left: 68%;
-  top: 49%;
-}
-
-#marcaBottom {
-  left: 68%;
-  top: 68%;
-}
-
-#marcaLavabo {
-  left: 45%;
-  top: 49%;
-}
-
-#marcaGrifo {
-  left: 40%;
-  top: 40%;
-}
-
-#marcaEspejo {
-  left: 45%;
-  top: 25%;
-}
-
-.selector {
-  position: absolute;
-  width: 10%;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 0% 3%;
-  right: 0;
-  height: 100%;
-  margin-right: -16%;
-  top: 0;
-}
-
-.titSelector {
-  font-weight: bold;
-  font-size: 14px;
-  padding: 20px 0px 10px 0px;
-}
-.mini {
-  font-size: 11px;
-  cursor: pointer;
-  margin-bottom: 7px;
-}
-
-/*360*/
-.cuarto {
-  width: 24%;
-  float: left;
-  margin-right: 1%;
-  text-align: center;
-}
-.cuarto img {
-  cursor: pointer;
-}
-
-.no-disponible img {
-  cursor: auto;
-}
-
-#mySpriteSpin2,
-#mySpriteSpin3 {
-  visibility: hidden;
-}
-
-/*plato personalizado*/
-
-.plato {
-  position: relative;
-  margin-top: 30px;
-}
-
-.basePlato {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  visibility: hidden;
-}
-
-.tinte {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 95%;
-  z-index: 2;
-  opacity: 0.8;
-  background: #fcfaf1;
-  visibility: hidden;
-  mix-blend-mode: multiply;
-}
-
-#primero {
-  visibility: visible;
-}
-
-.mascara {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 3;
-}
-
-.texturas {
-  width: 40%;
-  float: left;
-  margin-top: 20px;
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.texturas:nth-child(odd) {
-  float: right;
-}
-
-.titleTexturas {
-  font-size: 18px;
-  margin-bottom: 15px;
-}
-.color {
-  margin-bottom: 3px;
-}
-
-.actual {
-  color: #de4444;
-}
-
-/*CSS selector baÃ±o*/
-.contieneMarc {
-  width: 100%;
-  position: relative;
-}
-
-.marc {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-}
-
-#fondoMarc {
-  position: relative;
-  visibility: visible !important;
-}
-
-.marcadorMarc {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#marcaGrifoBanera {
-  left: 9.5%;
-  top: 50%;
-}
-
-#marcaBanera {
-  left: 15%;
-  top: 60%;
-}
-
-#marcaBaldaMarc {
-  left: 75%;
-  top: 50%;
-}
-
-#marcaGrifoMarc {
-  left: 75%;
-  top: 40%;
-}
-
-#marcaEspejoMarc {
-  left: 80%;
-  top: 30%;
-}
-
-.selectorMarc {
-  width: 10%;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 0% 3%;
-  top: 0;
-  right: 0;
-  height: 100%;
-  position: absolute;
-  margin-right: -16%;
-}
-
-/*CSS selector columna*/
-.contieneColumna {
-  width: 100%;
-  position: relative;
-}
-
-.columna {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-}
-
-#fondoColumna {
-  position: relative;
-  visibility: visible !important;
-}
-
-.marcadorColumna {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.selectorColumna {
-  width: 10%;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 0% 3%;
-  top: 0;
-  right: 0;
-  height: 100%;
-  position: absolute;
-  margin-right: -16%;
-}
-
-#marcaColumna {
-  left: 50%;
-  top: 30%;
-}
-
-/*FINAL*/
-.bagniFinal {
-  margin-bottom: 40px;
-}
-.LabFinal {
-  margin-top: 40px;
-}
-
-/*RESPONSIVE DESIGN*/
-
-/********************************************/
-/*****************MEDIA QUERYS***************/
-/********************************************/
-@media (max-width: 1400px) {
-  .titular {
-    width: 40%;
-    margin-left: 5%;
-  }
-  .txtIntroduccion {
-    width: 40%;
-    margin-left: 50%;
-  }
-}
-
-@media (max-width: 1024px) {
-  .tituloAlto {
-    padding-top: 50px;
-  }
-  .titulo {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-size: 120px;
-  }
-  .subTitulo {
-    padding-top: 20px;
-    font-size: 100px;
-  }
-  .titular {
-    width: 60%;
-    margin-left: 0;
-  }
-  .txtIntroduccion {
-    width: 50%;
-  }
-
-  .navegar {
-    bottom: 0%;
-  }
-  .medio {
-    width: 100%;
-  }
-  .barra {
-    height: 30px;
-    line-height: 40px;
-    padding-left: 5px;
-  }
-
-  .barra.in-view#w36 {
-    width: 36px;
-  }
-  .barra.in-view#w48 {
-    width: 48px;
-  }
-  .barra.in-view#w60 {
-    width: 60px;
-  }
-  .barra.in-view#w72 {
-    width: 72px;
-  }
-  .barra.in-view#w96 {
-    width: 96px;
-  }
-  .barra.in-view#w120 {
-    width: 120px;
-  }
-  .barra.in-view#w144 {
-    width: 144px;
-  }
-  .barra.in-view#w192 {
-    width: 192px;
-  }
-
-  .vertical {
-    padding-left: 5px;
-    width: 30px;
-  }
-
-  .in-view#h42 {
-    height: 84px;
-  }
-  .in-view#h52 {
-    height: 104px;
-  }
-  .in-view#h24 {
-    height: 48px;
-  }
-  .in-view#h36 {
-    height: 72px;
-  }
-  .in-view#h48 {
-    height: 96px;
-  }
-  .in-view#h72 {
-    height: 144px;
-  }
-}
-
-@media (max-width: 960px) {
-  .titular {
-    width: 100%;
-    margin-left: 0%;
-  }
-  .txtIntroduccion {
-    width: 100%;
-    margin-left: 0%;
-    margin-top: 20px;
-  }
-}
-
-@media (max-width: 820px) {
-  .titular {
-    font-size: 24px;
-  }
-
-  .barra {
-    height: 28px;
-    line-height: 36px;
-    padding-left: 5px;
-  }
-
-  .vertical {
-    padding-left: 5px;
-    width: 24px;
-  }
-}
-
-@media (max-width: 750px) {
-  .tituloAlto {
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 480px) {
-  .tercio {
-    width: 80%;
-    padding: 10%;
-    border-left: none;
-    border-right: none;
-    margin-left: 0;
-    border-bottom: 1px solid;
-  }
-  .medTer {
-    width: 100%;
-  }
-  .rayita {
-    width: 100%;
-  }
-
-  .titulo {
-    font-size: 80px;
-    padding: 10px 0px;
-  }
-  .subTitulo {
-    font-size: 64px;
-    padding: 10px 0px;
-  }
-}
-
-@media (max-height: 518px) {
-  .navegar {
-    display: none;
-  }
-}
-
-@media (max-height: 480px) {
-  .titulo {
-    font-size: 80px;
-    padding: 10px 0px;
-  }
-  .subTitulo {
-    font-size: 70px;
-    padding: 10px 0px;
-  }
-  .ip-logo,
-  .ip-loader {
-    position: absolute;
-    left: 0;
-    width: 80%;
-    opacity: 0;
-    cursor: default;
-    pointer-events: none;
-  }
-
-  .loaded .ip-logo {
-    -webkit-transform-origin: 120% -90%;
-    transform-origin: 120% -90%;
-    -webkit-animation: animLoadedLogo 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
-    animation: animLoadedLogo 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
-  }
 }
