--- a/src/modules/bath/06_AdaptBath/styles.css
+++ b/src/modules/bath/06_AdaptBath/styles.css
@@ -5,23 +5,19 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  position: relative
+  position: relative;
 }
-
 .react-slideshow-container .nav {
   z-index: 10;
   position: absolute;
-  cursor: pointer
+  cursor: pointer;
 }
-
 .react-slideshow-container .nav:first-of-type {
-  left: 0
+  left: 0;
 }
-
 .react-slideshow-container .nav:last-of-type {
-  right: 0
+  right: 0;
 }
-
 .react-slideshow-container .default-nav {
   height: 30px;
   background: rgba(255, 255, 255, 0.6);
@@ -29,7 +25,7 @@
   border: 0;
   text-align: center;
   color: #fff;
-  border-radius: 50%;
+  border-radius: 0%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,31 +34,26 @@
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center
+  justify-content: center;
 }
-
 .react-slideshow-container .default-nav:hover,
 .react-slideshow-container .default-nav:focus {
   background: #fff;
   color: #666;
-  outline: 0
+  outline: 0;
 }
-
 .react-slideshow-container .default-nav.disabled:hover {
-  cursor: not-allowed
+  cursor: not-allowed;
 }
-
 .react-slideshow-container .default-nav:first-of-type {
   margin-right: -30px;
   border-right: 0;
-  border-top: 0
+  border-top: 0;
 }
-
 .react-slideshow-container .default-nav:last-of-type {
-  margin-left: -30px
+  margin-left: -30px;
 }
-
-.react-slideshow-container+ul.indicators {
+.react-slideshow-container + ul.indicators {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,79 +62,70 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  /* margin-top: 20px */
+  margin-top: 20px;
 }
-
-.react-slideshow-container+ul.indicators li {
-  display: inline;
+.react-slideshow-container + ul.indicators li {
+  display: inline-block;
   position: relative;
-  /* width: 20px;
-  height: 20px; */
-  /* padding: 20px; */
+  width: 25px;
+  height: 7px;
+  padding: 5px;
   margin: 0;
 }
-
-.react-slideshow-container+ul.indicators .each-slideshow-indicator {
+.react-slideshow-container + ul.indicators .each-slideshow-indicator {
   border: 0;
-  opacity: .25;
+  opacity: 0.25;
   cursor: pointer;
   background: transparent;
-  color: transparent
+  color: transparent;
 }
-
-.react-slideshow-container+ul.indicators .each-slideshow-indicator:before {
+.react-slideshow-container + ul.indicators .each-slideshow-indicator:before {
   position: absolute;
-  top: -30px;
+  top: 0;
   left: 0;
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  content: '';
+  content: "";
   background: #000;
-  text-align: center
+  text-align: center;
 }
-
-.react-slideshow-container+ul.indicators .each-slideshow-indicator:hover,
-.react-slideshow-container+ul.indicators .each-slideshow-indicator.active {
-  opacity: .75;
-  outline: 0
+.react-slideshow-container + ul.indicators .each-slideshow-indicator:hover,
+.react-slideshow-container + ul.indicators .each-slideshow-indicator.active {
+  opacity: 0.75;
+  outline: 0;
 }
-
 .react-slideshow-fadezoom-wrapper {
   width: 100%;
-  overflow: hidden
+  overflow: hidden;
 }
-
 .react-slideshow-fadezoom-wrapper .react-slideshow-fadezoom-images-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
-
-.react-slideshow-fadezoom-wrapper .react-slideshow-fadezoom-images-wrap>div {
+.react-slideshow-fadezoom-wrapper .react-slideshow-fadezoom-images-wrap > div {
   position: relative;
-  opacity: 0
+  opacity: 0;
 }
-
-.react-slideshow-wrapper .react-slideshow-fade-images-wrap>div[aria-hidden='true'] {
-  display: none
+.react-slideshow-wrapper
+  .react-slideshow-fade-images-wrap
+  > div[aria-hidden="true"] {
+  display: none;
 }
-
 .react-slideshow-wrapper.slide {
   width: 100%;
-  overflow: hidden
+  overflow: hidden;
 }
-
 .react-slideshow-wrapper .images-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
-
-.react-slideshow-wrapper .images-wrap>div[aria-hidden='true'] {
-  display: none
+.react-slideshow-wrapper .images-wrap > div[aria-hidden="true"] {
+  display: none;
 }
